--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:20-alpine
 WORKDIR /app
-COPY app.js ./
-COPY about.json ./
-RUN npm install express
+COPY package*.json ./
+RUN npm install
+COPY . .
 EXPOSE 8080
-CMD ["node", "app.js"]
+CMD ["npm", "start"]
