[INIT]: add Docker support, disable Node debug mode, and make API accessible
- Added Docker and docker-compose configuration for the server and client
- Disabled inspect/debugger WebSocket in Nx config
- Fixed Express server binding for external accessibility
- Cleaned project before push

--- a/apps/server/project.json
+++ b/apps/server/project.json
@@ -14,9 +14,9 @@
         "outputPath": "dist/apps/server",
         "format": ["cjs"],
         "bundle": false,
-        "main": "/apps/server/src/main.ts",
-        "tsConfig": "/apps/server/tsconfig.app.json",
-        "assets": ["/apps/server/src/assets"],
+        "main": "apps/server/src/main.ts",
+        "tsConfig": "apps/server/tsconfig.app.json",
+        "assets": ["apps/server/src/assets"],
         "generatePackageJson": true,
         "esbuildOptions": {
           "sourcemap": true,
@@ -69,7 +69,8 @@
       "dependsOn": ["build"],
       "options": {
         "buildTarget": "server:build",
-        "runBuildTargetDependencies": false
+        "runBuildTargetDependencies": false,
+        "inspect": false
       },
       "configurations": {
         "development": {
