--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "core": ["libs/core/src/index.ts"],
       "gmail-service": ["libs/gmail-service/src/index.ts"]
     }
   },
