--- a/apps/front-mobile/package.json
+++ b/apps/front-mobile/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@react-native/metro-config": "*",
-    "react": "*",
-    "react-native": "*",
+  "react": "19.1.0",
+  "react-native": "0.81.4",
     "react-native-svg": "*",
     "@testing-library/react-native": "*",
     "react-test-renderer": "*",
