--- a/apps/front-mobile/package.json
+++ b/apps/front-mobile/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@types/react": "^19.1.0",
     "@react-native/metro-config": "*",
-  "react": "19.1.0",
+  "react": "19.1.1",
   "react-native": "0.81.4",
     "react-native-svg": "*",
     "@testing-library/react-native": "*",
