--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
-    "@types/react": "~19.0.10",
+  "@types/react": "^19.1.0",
     "@types/react-dom": "~19.0.6",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^3.0.0",
     "babel-jest": "^30.0.2",
-    "esbuild": "^0.19.2",
+    "esbuild": "^0.25.9",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
@@ -79,8 +79,8 @@
   "dependencies": {
     "axios": "^1.6.0",
     "express": "^4.21.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "~0.79.3"
+  "react": "19.1.1",
+  "react-dom": "19.1.1",
+  "react-native": "0.81.4"
   }
 }
